acvm-repo/msgpack_tagged/tests/compile_fail/serde_other_on_non_unit_variant.stderr
error: #[serde(other)] must be on a unit variant
  --> tests/compile_fail/serde_other_on_non_unit_variant.rs:14:5
   |
14 | /     #[tag(9)]
15 | |     #[serde(other)]
16 | |     NotUnit(u32),
   | |________________^

error: `#[serde(other)]` must be on a unit variant — serde-derive only routes unknown identifiers to unit variants, and our wrapper inherits that constraint
  --> tests/compile_fail/serde_other_on_non_unit_variant.rs:14:5
   |
14 | /     #[tag(9)]
15 | |     #[serde(other)]
16 | |     NotUnit(u32),
   | |________________^
